fix feature pull-quote whitespace

--- a/drupal/sites/all/themes/tp4/sass/page/_openpublish_article.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_openpublish_article.scss
@@ -573,6 +573,7 @@
           line-height: .15;
           vertical-align: text-bottom;
           padding-left: .125em;
+          white-space: nowrap;
         }
       }
 
